# pep503_simple_repo_broker

./: .pre-commit-config.yaml  README.md  pyproject.toml  skaffold.yaml
.cursor/rules/: general.mdc  python.mdc
kube/prd/mgt/: deployment.yaml  ingress.yaml  service.yaml
scripts/: build_and_deploy.sh  build_service.sh
src/pep503_simple_repo_broker/: __init__.py  __main__.py  api.py  application.py  html_renderer.py
src/pep503_simple_repo_broker/integrations/: abstracts.py
src/pep503_simple_repo_broker/integrations/github/: __init__.py  integration.py  objects.py  repository.py  types.py
tests/: conftest.py
tests/units/: fixtures.py  test_html_renderer.py  test_main.py
tests/units/integrations/github/: test_repository.py
