[tool.poetry]
name = "pep503_simple_repo_broker"
homepage = "https://github.com/miragecentury/pep503_simple_repo_broker"
repository = "https://github.com/miragecentury/pep503_simple_repo_broker"
version = "0.1.0"
description = ""
authors = ["miragecentury <victorien.vanroye@gmail.com>"]
maintainers = ["miragecentury <victorien.vanroye@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pep503_simple_repo_broker", from = "src" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
aiohttp = "^3.12.14"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.10.0"
types-requests = "^2.32.0.20240712"
types-pyyaml = "^6.0.12.20240311"
pylint = {version="^3.2.2", extras=["spelling"]}
pre-commit = "^4.0.1"
pyupgrade = "^3.15.2"
pytest = "^8.2.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^7.0.0"
ruff = "^0.13.0"
pytest-asyncio = "^1.0.0"
testcontainers = { version="^4.9.0", extras=["mongodb", "redis"] }
types-deprecated = "^1.2.15.20241117"
types-pygments = "^2.18.0.20240506"
types-colorama = "^0.4.15.20240311"
types-protobuf = "^6.30.2.20250822"
types-psutil = "^7.0.0.20250601"
types-pyopenssl = "^24.1.0.20240722"
types-ujson = "^5.10.0.20240515"

[tool.poetry.extras]

[tool.poetry.scripts]
run_server = "pep503_simple_repo_broker.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--import-mode=importlib -n auto --color=yes"
filterwarnings = [
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
packages = "velmios.app"
mypy_path  = "src:tests"
namespace_packages = true
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["D","F","E","W","I","UP","PL","N","RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"
